more page format

--- a/index.html
+++ b/index.html
@@ -6,18 +6,32 @@
   <style>
     h1{
     text-align: center;
-    color: blue
+    color: blue;
+    font-family: Verdana, Geneva, sans-serif;
+    font-size: 2.5em;
+    font-weight: lighter;
+
   }
   #cesiumContainer{
     position: absolute;
-    margin: -250px 0 0 -350px;
+    margin: -240px 0 0 -350px;
     top: 50%;
     left: 50%;
+  }
+
+  body{
+    background: rgb(45, 109, 206);
+  }
+
+  hr{
+    border-top: 1px solid blue;
   }
   </style>
 </head>
 <body>
   <h1>Welcome to Cesium</h1>
+  <hr></hr>
+  <br></br>
   <div id="cesiumContainer" style="width: 700px; height:400px"></div>
   <script>
     Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI1NDU0MGY2MC00OGEwLTQ1MzUtODZiNi0zNGNhMDE4ZTQ3MjkiLCJpZCI6MjE1NDYsInNjb3BlcyI6WyJhc3IiLCJnYyJdLCJpYXQiOjE1Nzk4MTY4NDh9.K8QtU1NfdHfW3rFInQzpw14ai1CifIt_uyBq00ikRlc';
