--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to Cesium</h1>
+  <h1>Welcome to a Cesium App</h1>
   <hr></hr>
   <br></br>
-  <div id="cesiumContainer" style="width: 700px; height:400px"></div>
+  <div id="cesiumContainer" style="width: 700px; height:500px"></div>
   <script>
     Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI1NDU0MGY2MC00OGEwLTQ1MzUtODZiNi0zNGNhMDE4ZTQ3MjkiLCJpZCI6MjE1NDYsInNjb3BlcyI6WyJhc3IiLCJnYyJdLCJpYXQiOjE1Nzk4MTY4NDh9.K8QtU1NfdHfW3rFInQzpw14ai1CifIt_uyBq00ikRlc';
     var viewer = new Cesium.Viewer('cesiumContainer');
